src/katnote/resources/ui/application.css
.TaskRowIcon {
	-fx-background-image: url('./catbulletblack.png');
}
.TaskRowText {
    -fx-font-family: "Sen ExtraBold";
    -fx-text-fill: #FF9933;
    -fx-font-size: 16pt;	
}
.check {
	-fx-background-image: url('./checkmark.png');
}
.katImage {
	-fx-background-image: url('./Kat.png');
}
.TaskRowDateText {
    -fx-font-family: "Sen Bold";
    -fx-text-fill: #FF9933;
    -fx-font-size: 12pt;	
}
.TaskGroupHeaderText {
    -fx-font-family: "Sen ExtraBold";
    -fx-text-fill: #FF9933;
    -fx-font-size: 18pt;	
}
.title {
    -fx-font-family: "Sen ExtraBold";
    -fx-text-fill: #FF9933;
    -fx-font-size: 24pt;
}
.scroll-pane {
    -fx-background-color:transparent;
}

